# Phagocyte

./: .gitignore  README.md  config.yaml  pyproject.toml
ingestor/: .gitignore  README.md  pyproject.toml
ingestor/configs/: default.yaml
ingestor/mcp/ingestor_mcp/: README.md  server.py
ingestor/src/ingestor/: __init__.py  __main__.py  cli.py  config.py  types.py
ingestor/src/ingestor/ai/: __init__.py
ingestor/src/ingestor/ai/claude/: __init__.py  agent.py
ingestor/src/ingestor/ai/ollama/: __init__.py  vlm.py
ingestor/src/ingestor/core/: __init__.py  charset.py  detector.py  registry.py  router.py
ingestor/src/ingestor/extractors/: __init__.py  base.py
ingestor/src/ingestor/extractors/archive/: __init__.py  zip_extractor.py
ingestor/src/ingestor/extractors/audio/: __init__.py  audio_extractor.py
ingestor/src/ingestor/extractors/data/: __init__.py  csv_extractor.py  json_extractor.py  xml_extractor.py
ingestor/src/ingestor/extractors/docx/: __init__.py  docx_extractor.py
ingestor/src/ingestor/extractors/epub/: __init__.py  epub_extractor.py
ingestor/src/ingestor/extractors/excel/: __init__.py  xls_extractor.py  xlsx_extractor.py
ingestor/src/ingestor/extractors/git/: __init__.py  git_extractor.py
ingestor/src/ingestor/extractors/image/: __init__.py  image_extractor.py
ingestor/src/ingestor/extractors/pdf/: __init__.py  pdf_extractor.py
ingestor/src/ingestor/extractors/pptx/: __init__.py  pptx_extractor.py
ingestor/src/ingestor/extractors/text/: __init__.py  txt_extractor.py
ingestor/src/ingestor/extractors/web/: __init__.py  web_extractor.py
ingestor/src/ingestor/extractors/youtube/: __init__.py  youtube_extractor.py
ingestor/src/ingestor/images/: __init__.py  converter.py  naming.py  processor.py
ingestor/src/ingestor/markdown/: __init__.py  converter.py
ingestor/src/ingestor/output/: __init__.py  writer.py
ingestor/src/ingestor/postprocess/: __init__.py  orphan_images.py
ingestor/tests/: conftest.py
ingestor/tests/fixtures/: generate_fixtures.py
ingestor/tests/fixtures/data/: sample.json  sample.xml
ingestor/tests/fixtures/documents/: sample.md  sample.rst  sample.txt  sample_latin1.txt
ingestor/tests/fixtures/reference/: complex.docx  complex.docx.expected.md  complex.pptx  complex.pptx.expected.md  complex.xlsx  complex.xlsx.expected.md  edge_cases.csv  edge_cases.csv.expected.md  edge_cases.json  edge_cases.json.expected.md  generate_reference_fixtures.py  long_line.txt  long_line.txt.expected.md  simple.md.expected.md  special_chars.txt  special_chars.txt.expected.md  unicode_content.txt  unicode_content.txt.expected.md
ingestor/tests/fixtures/spreadsheets/: sample.tsv
ingestor/tests/integration/: __init__.py  test_archive_extraction.py  test_audio_extraction.py  test_batch_operations.py  test_cli.py  test_data_extraction.py  test_document_extraction.py  test_epub_extraction.py  test_full_pipeline.py  test_git_extraction.py  test_image_extraction.py  test_spreadsheet_extraction.py  test_vlm_extraction.py  test_web_extraction.py  test_youtube_extraction.py
ingestor/tests/unit/: __init__.py  test_ai_modules.py  test_charset.py  test_cli_real.py  test_config.py  test_edge_cases.py  test_git_extractor.py  test_image_extractor.py  test_images.py  test_orphan_images.py  test_output_writer.py  test_performance.py  test_reference.py  test_router_registry.py  test_web_extractor.py  test_xls_extractor.py  test_youtube_extractor.py
ingestor/tests/unit/core/: test_charset.py  test_registry.py
ingestor/tests/unit/extractors/: __init__.py  test_git_extractor.py  test_json_extractor.py  test_pdf_extractor.py  test_pdf_postprocess.py
ingestor/tests/unit/images/: __init__.py  test_converter.py  test_naming.py
ingestor/tests/unit/markdown/: __init__.py  test_converter.py
parser/: .gitignore  README.md  config.yaml.example  pyproject.toml
parser/docs/: acquisition-client-analysis.md  agent-comparison-report.md  parse-refs-comparison-report.md
parser/mcp/parser_mcp/: README.md  server.py
parser/src/parser/: __init__.py  cli.py  parser.py  validation.py
parser/src/parser/acquisition/: README.md  __init__.py  config.py  downloader.py  logger.py  rate_limiter.py  retriever.py
parser/src/parser/acquisition/clients/: __init__.py  acl_anthology.py  arxiv.py  base.py  biorxiv.py  crossref.py  frontiers.py  institutional.py  libgen.py  openalex.py  pmc.py  scihub.py  semantic_scholar.py  unpaywall.py  (+1 more)
parser/src/parser/agent/: __init__.py  anthropic_agent.py  base.py  factory.py  gemini_agent.py
parser/src/parser/doi2bib/: __init__.py  metadata.py  resolver.py  verifier.py
processor/: .gitignore  README.md  pyproject.toml
processor/configs/: default.yaml
processor/docker/lancedb-server/: Dockerfile  README.md  docker-compose.yml  server.py
processor/mcp/processor_mcp/: README.md  __init__.py  server.py
processor/mcp/rag_mcp/: README.md  __init__.py  config.py  server.py
processor/mcp/rag_mcp/optimizations/: __init__.py  hyde.py  parent_expansion.py  reranker.py
processor/src/processor/: __init__.py  __main__.py  cli.py  config.py  types.py
processor/src/processor/chunkers/: __init__.py  adapters.py  base.py  factory.py
processor/src/processor/core/: __init__.py  detector.py  router.py
processor/src/processor/database/: __init__.py  exporter.py  loader.py  schemas.py
processor/src/processor/embedders/: __init__.py  base.py  ollama.py  openclip.py  profiles.py  transformers.py
processor/src/processor/images/: __init__.py  processor.py
processor/src/processor/pipeline/: __init__.py  processor.py
processor/tests/: __init__.py  conftest.py
processor/tests/integration/: test_e2e.py  test_papers.py
processor/tests/unit/: test_chunkers.py  test_detector.py  test_images.py  test_profiles.py
researcher/: README.md  USAGE.md  pyproject.toml
researcher/configs/: prompts.yaml  prompts_backup.yaml  research.yaml
researcher/docs/: gemini-deep-research-api.md
researcher/mcp/researcher_mcp/: README.md  server.py
researcher/src/researcher/: __init__.py  __main__.py  cli.py  deep_research.py
(+257 files in other folders)
