[project]
name = "phagocyte"
version = "0.1.0"
description = "End-to-end pipeline: Research → Parse → Ingest → Process → RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "ebooklib>=0.20",
    "lxml>=5.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-pptx>=1.0.2",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
all = [
    "phagocyte[research,parse,ingest,process,rag,dev]",
]
research = []
parse = []
ingest = []
process = []
rag = []
mcp = []
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
phagocyte = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli.py"]

[tool.uv.sources]
researcher = { path = "./src/researcher", editable = true }
parser = { path = "./src/parser", editable = true }
ingestor = { path = "./src/ingestor", editable = true }
processor = { path = "./src/processor", editable = true }

[tool.uv.workspace]
members = ["src/researcher", "src/parser", "src/ingestor", "src/processor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires module installations (run with --integration)",
    "slow: marks tests as slow running",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
